fixing dark mode header colors

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -15,7 +15,7 @@ html[data-theme="light"] {
   --main-text-color: hsl(0, 0%, 20%);
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
     html, html[data-theme="dark"] {
       --link-color: rgb( 100, 210, 255);
     	--main-background-color: hsl(0, 0%, 20%);
@@ -37,4 +37,18 @@ body {
 
 a {
 	color: var(--link-color);
+}
+
+
+
+h1 {
+  color:var(--main-text-color);
+}
+
+h2 {
+  color:var(--main-text-color);
+}
+
+h3, h4, h5, h6 {
+  color:var(--main-text-color);
 }
